# diansai_version

./: .main.py.swp  AGENTS.md  README.md  benchmark_hardware.py  detect_tissue.py  host_main.py  lm_detect.py  main.py  main_downscale_thread.py  param.npz  pyproject.toml  reasonix.toml  run_with_dns.sh  test_fps.py  tools_fast_pure.py  tsp_main_ultimate.py  uart.py
docs/superpowers/plans/: 2026-07-12-opencv-web-debugger.md
docs/superpowers/specs/: 2026-07-12-opencv-web-debugger-design.md
tests/: test_binarizer_adaptive.py  test_binarizer_compare.py  test_binarizer_range.py  test_laser_detect.py  test_rect_detect.py
tools/: _camshift.py  _colors.py  _drawing.py  _geometry.py  _laser_detect.py  _preprocess.py  _rect_detect.py  _threshold.py  _tracking.py  hardware_pipeline.py  param.py  peripheral.py  rect_detect.py  test_gpio.py  tools.py
tools/tools/: hardware_pipeline.py  peripheral.py  rect_detect.py  tools.py
tools/tools/web/: camera.py  params.py  streamer.py
tools/tools/web/static/js/: app.js  chart.js  log.js  roi.js  utils.js
tools/web/: README.md  __init__.py  camera.py  log_buffer.py  recorder.py  server.py
tools/web/static/css/: debug.css
tools/web/static/js/: app.js  layout.js  params.js
tools/web/templates/: index.html
