[project]
name = "tspfile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
[tool.pyright]
venvPath = "./cv_venv/"
venv = "cv_venv"
typeCheckingMode = "basic"
reportCallIssue = false
reportArgumentType = false
reportGeneralTypeIssues = false
reportMissingImports = false
reportAttributeAccessIssue = false
reportUnusedImport = false
reportUnusedVariable = false
