[project]
name = "tspfile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=5.0.0.93",
]
[tool.pyright]
typeCheckingMode = "basic"
reportCallIssue = false
reportArgumentType = false
reportGeneralTypeIssues = false
reportMissingImports = false
reportAttributeAccessIssue = false
reportUnusedImport = false
reportUnusedVariable = false
